--- a/Wan.SelfNuGets/Wan.SelfNuGets.BaGet/Wan.SelfNuGets.BaGet.TestLibrary/nuget.config
+++ b/Wan.SelfNuGets/Wan.SelfNuGets.BaGet/Wan.SelfNuGets.BaGet.TestLibrary/nuget.config
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <packageSources>
-    <!--To inherit the global NuGet package sources remove the <clear/> line below -->
-    <clear />
-    <add key="nuget" value="https://api.nuget.org/v3/index.json" />
-    <add key="BaGet" value="http://localhost:5555/v3/index.json" />
-  </packageSources>
+    <packageSources>
+        <!--To inherit the global NuGet package sources remove the <clear/> line below -->
+        <clear />
+        <add key="nuget" value="https://api.nuget.org/v3/index.json" />
+        <add key="BaGet" value="http://localhost:5555/v3/index.json" allowInsecureConnections="true"/>
+    </packageSources>
 </configuration>
